changed folder structure and admin page working